--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object."
+    "#Your code here; import sqlite, create a connection and then a cursor object.\n",
+    "\n",
+    "\n",
+    "imo"
    ]
   },
   {
