--- a/index.ipynb
+++ b/index.ipynb
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; import sqlite, create a connection and then a cursor object.\n",
     "\n",
     "\n",
-    "imo"
+    "import sqlite3"
    ]
   },
   {
