--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,8 @@
     "#Your code here; import sqlite, create a connection and then a cursor object.\n",
     "\n",
     "\n",
-    "import sqlite3\n"
+    "import sqlite3\n",
+    "\n"
    ]
   },
   {
