--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "\n",
     "\n",
     "import sqlite3\n",
-    "conn= sqlite3.connect(\"dogs.db\")\n"
+    "conn= sqlite3.connect(\"dogs.db\")"
    ]
   },
   {
