Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,8 @@
     "\n",
     "\n",
     "import sqlite3\n",
-    "conn= sqlite3.connect(\"dogs.db\")"
+    "conn= sqlite3.connect(\"dogs.db\")\n",
+    "cur"
    ]
   },
   {
