Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "import sqlite3\n",
     "conn= sqlite3.connect(\"dogs.db\")\n",
-    "cur= conn"
+    "cur= conn.cursor"
    ]
   },
   {
