--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "\n",
     "import sqlite3\n",
     "conn= sqlite3.connect(\"dogs.db\")\n",
-    "cur= conn.cursor"
+    "cur= conn.cursor()"
    ]
   },
   {
