--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute()"
+    "cur.execute('''SELE''')"
    ]
   },
   {
