--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name, breed FROM dogs WHERE gender=\"F\" ''')"
+    "cur.execute('''SELECT name, breed FROM dogs WHERE gender=\"F\"; ''')"
    ]
   },
   {
