--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT ''')"
+    "cur.execute('''SELECT name FROM DOGS''')"
    ]
   },
   {
