Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name FROM dogs ORDER BY ASC;''').fetchall()"
+    "cur.execute('''SELECT name FROM dogs ORDER BY ASC''';).fetchall()"
    ]
   },
   {
