--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "cur.execute('''''')"
    ]
   },
   {
