--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''''')"
+    "cur.execute('''SELECT ''')"
    ]
   },
   {
