Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name FR''')"
+    "cur.execute('''SELECT name FROM dog WHERE name ''')"
    ]
   },
   {
