Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs WHERE name = None ''').fetchall()"
+    "cur.execute('''SELECT NnameFROM dogs WHERE name = None ''').fetchall()"
    ]
   },
   {
