--- a/index.ipynb
+++ b/index.ipynb
@@ -192,21 +192,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-241b6cdd3ddf>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-241b6cdd3ddf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cur.execute('''SELECT * FROM dogs WHERE name = \"None\"''';).fetchall()\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (2, 'McGruff', 10, 'M', 'bloodhound', 'aware', 0),\n",
+       " (3, 'Scooby', 6, 'M', 'great dane', 'hungry', 1),\n",
+       " (4, 'Little Ann', 5, 'F', 'coonhound', 'loyal', 0),\n",
+       " (5, 'Pickles', 13, 'F', 'black lab', 'mischievous', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (7, 'Lassie', 7, 'F', 'collie', 'loving', 1),\n",
+       " (8, 'Snowy', 8, 'F', 'fox terrier', 'adventurous', 0),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs WHERE name = \"None\"''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs ''').fetchall()"
    ]
   },
   {
