Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs ''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs WHERE name ''').fetchall()"
    ]
   },
   {
