--- a/index.ipynb
+++ b/index.ipynb
@@ -192,31 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
-       " (2, 'McGruff', 10, 'M', 'bloodhound', 'aware', 0),\n",
-       " (3, 'Scooby', 6, 'M', 'great dane', 'hungry', 1),\n",
-       " (4, 'Little Ann', 5, 'F', 'coonhound', 'loyal', 0),\n",
-       " (5, 'Pickles', 13, 'F', 'black lab', 'mischievous', 1),\n",
-       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
-       " (7, 'Lassie', 7, 'F', 'collie', 'loving', 1),\n",
-       " (8, 'Snowy', 8, 'F', 'fox terrier', 'adventurous', 0),\n",
-       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "incomplete input",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-9ddc8d7067ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT * FROM dogs WHERE name= '''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: incomplete input"
+     ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs WHERE name ''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs WHERE name= \"\" ''').fetchall()"
    ]
   },
   {
