Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT breed FROM dogs WHERE name= \"None\" ''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs WHERE name= \"Cliffo\" ''').fetchall()"
    ]
   },
   {
