--- a/index.ipynb
+++ b/index.ipynb
@@ -192,23 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[(6, 'Clifford', 4, 'M', 'big red', 'smiley', 1)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs WHERE name= \"Cliffo\" ''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs WHERE name= \"Clifford\" ''').fetchall()"
    ]
   },
   {
