Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs WHERE name= \"NULL\"''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs WHERE name IS NULL\"''').fetchall()"
    ]
   },
   {
