--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cur."
    ]
   },
   {
