--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM d''')"
+    "cur.execute('''SELECT * FROM dogs''')"
    ]
   },
   {
