Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name, breed FROM dogs WHERE hungry IS )"
+    "cur.execute('''SELECT name, breed FROM dogs WHERE hungry IS True OR)"
    ]
   },
   {
