Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,28 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Snoopy', 'beagle', 3),\n",
-       " ('Clifford', 'big red', 4),\n",
-       " (None, 'golden retriever', 4),\n",
-       " ('Scooby', 'great dane', 6),\n",
-       " ('Lassie', 'collie', 7),\n",
-       " ('Pickles', 'black lab', 13)]"
+       "[('Snoopy', 'beagle', 3, 1),\n",
+       " ('Clifford', 'big red', 4, 1),\n",
+       " (None, 'golden retriever', 4, 1),\n",
+       " ('Scooby', 'great dane', 6, 1),\n",
+       " ('Lassie', 'collie', 7, 1),\n",
+       " ('Pickles', 'black lab', 13, 1)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name, breed, age,hngr FROM dogs WHERE hungry IS True ORDER BY age''').fetchall()"
+    "cur.execute('''SELECT name, breed, age, h FROM dogs WHERE hungry IS True ORDER BY age''').fetchall()"
    ]
   },
   {
