--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute()"
+    "cur.execute(''' SELECT MAX''')"
    ]
   },
   {
