Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute(''' SELECT name, age, temperament FROM dogs H''')"
+    "cur.execute(''' SELECT name, age, temperament FROM dogs WHERE age is ''')"
    ]
   },
   {
