--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute(''' SELECT name, age, temperament FROM dogs WHERE max(age)''').fetchall()"
+    "cur.execute(''' SELECT name, max(age), temperament FROM dogs WHERE max(age)''').fetchall()"
    ]
   },
   {
