--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT *''')"
+    "cur.execute('''SELECT * FROM dogs ORDE''')"
    ]
   },
   {
