--- a/index.ipynb
+++ b/index.ipynb
@@ -281,24 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "near \"LIM\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-67c07eeea659>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT * FROM dogs ORDER BY age ASC LIM 3'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: near \"LIM\": syntax error"
-     ]
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT * FROM dogs ORDER BY age ASC LIM 3''').fetchall()"
+    "cur.execute('''SELECT * FROM dogs ORDER BY age ASC LIMIT 3''').fetchall()"
    ]
   },
   {
