Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -300,6 +302,15 @@
    "source": [
     "#Your code here\n",
     "cur.execute('''SELECT * FROM dogs ORDER BY age ASC LIMIT 3''').fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.ex"
    ]
   },
   {
