Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,11 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f9eb3feb180>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cur.execute('''SELECT * ''')"
+    "cur.execute('''SELECT * FROM dogs;''')"
    ]
   },
   {
