Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELEC''')"
+    "cur.execute('''SELECT name,breed''')"
    ]
   },
   {
