Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,breed FROM dogs WHERE age IS ''')"
+    "cur.execute('''SELECT name,breed FROM dogs WHERE 5<age<10''')"
    ]
   },
   {
