--- a/index.ipynb
+++ b/index.ipynb
@@ -343,12 +343,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('McGruff', 'bloodhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Clifford', 'big red'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier'),\n",
+       " (None, 'golden retriever')]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,breed FROM dogs WHERE 5<age<10''')"
+    "cur.execute('''SELECT name,breed FROM dogs WHERE 5<age<10;''').fetchall()"
    ]
   },
   {
