Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,31 +343,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Snoopy', 'beagle'),\n",
-       " ('McGruff', 'bloodhound'),\n",
-       " ('Scooby', 'great dane'),\n",
-       " ('Little Ann', 'coonhound'),\n",
-       " ('Pickles', 'black lab'),\n",
-       " ('Clifford', 'big red'),\n",
-       " ('Lassie', 'collie'),\n",
-       " ('Snowy', 'fox terrier'),\n",
-       " (None, 'golden retriever')]"
+       "[('Snoopy', 'beagle', 3),\n",
+       " ('McGruff', 'bloodhound', 10),\n",
+       " ('Scooby', 'great dane', 6),\n",
+       " ('Little Ann', 'coonhound', 5),\n",
+       " ('Pickles', 'black lab', 13),\n",
+       " ('Clifford', 'big red', 4),\n",
+       " ('Lassie', 'collie', 7),\n",
+       " ('Snowy', 'fox terrier', 8),\n",
+       " (None, 'golden retriever', 4)]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,breed FROM dogs WHERE 5<age<10;''').fetchall()"
+    "cur.execute('''SELECT name,breed,age FROM dogs WHERE 5<age<10;''').fetchall()"
    ]
   },
   {
