Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,25 +343,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Scooby', 'great dane', 6),\n",
+       "[('McGruff', 'bloodhound', 10),\n",
+       " ('Scooby', 'great dane', 6),\n",
+       " ('Little Ann', 'coonhound', 5),\n",
        " ('Lassie', 'collie', 7),\n",
        " ('Snowy', 'fox terrier', 8)]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,breed,age FROM dogs WHERE 5<age and age <10;''').fetchall()"
+    "cur.execute('''SELECT name,breed,age FROM dogs WHERE 5<=age and age<=10;''').fetchall()"
    ]
   },
   {
