Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE ''')"
+    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry ''')"
    ]
   },
   {
