Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,12 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 3, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " (None, 4, 1)]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7''')"
+    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7;''').fetchall()"
    ]
   },
   {
