Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7;''').fetchall()"
+    "cur.execute('''SELECT name,age, hungry FROM dogs WHERE hungry IS True AND age>=2 AND age<=7 ORDER ;''').fetchall()"
    ]
   },
   {
