--- a/index.ipynb
+++ b/index.ipynb
@@ -375,20 +375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Snoopy', 3, 1),\n",
+       "[('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
        " ('Clifford', 4, 1),\n",
        " (None, 4, 1),\n",
-       " ('Scooby', 6, 1),\n",
-       " ('Lassie', 7, 1)]"
+       " ('Snoopy', 3, 1)]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
